[package]
name = "rydde"
version = "0.1.0"
authors = ["byteslicer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
kamadak-exif = "0.5"
globset = "0.3"
walkdir = "2"
indicatif = {version = "*", features = ["rayon"]}
chrono = "0.4.19"
blake2 = "0.9.1"
hex = "0.4"
clap = "2"
anyhow = "1.0.38"